# thumbsget

./: .gitignore  README.md  meson.build  thumbsget.sln  thumbsget4web.html
thumbsget/: App.config  Form1.Designer.vb  aaformMainWindow.Designer.vb  aaformMainWindow.resx  aaformMainWindow.vb  thumbsget.vbproj
thumbsget/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
thumbsget4gtk/: com.drew-naylor.thumbsget4gtk.json  meson.build
thumbsget4gtk/data/: com.drew-naylor.thumbsget4gtk.appdata.xml.in  com.drew-naylor.thumbsget4gtk.desktop.in  com.drew-naylor.thumbsget4gtk.gschema.xml  meson.build
thumbsget4gtk/po/: POTFILES  meson.build
thumbsget4gtk/src/: aaformMainWindow.glade  main.cs  meson.build  thumbsget4gjs.js  thumbsget4gtk.in  thumbsget4py.py
thumbsget4mac/: readme.md
thumbsget4mac/thumbsget4mac/: AppDelegate.cs  GlobalSuppressions.cs  Info.plist  Main.cs  Main.storyboard  ViewController.cs  ViewController.designer.cs  Window.cs  Window.designer.cs  Window.xib  getThumbnailUrl.cs  readme.md  thumbsget4mac.csproj  thumbsget4mac.sln
thumbsget4mac/thumbsget4mac/Resources/: Credits.html
thumbsget4web/: readme.md  thumbsget4web-ui-styling.css  thumbsget4web.html
